# ios-remote

./: CHANGELOG.md  Cargo.toml  LICENSE  README.ja.md  README.md  SECURITY.md  TESTING.md  build.rs  deny.toml
.cargo/: audit.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  test.yml
docs/: ROADMAP-v0.6.md
notes/: smoke-v0.5.0.md  smoke-v0.6.0.md  smoke-v0.6.md  smoke-v0.7.md
src/: config.rs  error.rs  main.rs
src/airplay/: audio.rs  crypto.rs  display.rs  event.rs  info.rs  mdns.rs  mod.rs  ntp.rs  pairing.rs  rtsp.rs  stream.rs
src/devtools/: command_palette.rs  lua_scripting.rs  mod.rs  network_diag.rs  protocol_analyzer.rs  throttle.rs  timeline.rs
src/features/: ai_vision.rs  annotation.rs  app_detector.rs  audio_capture.rs  audio_transcription.rs  audio_viz.rs  auto_connect.rs  battery_saver.rs  benchmark.rs  clipboard_history.rs  clipboard_sync.rs  color_picker.rs  custom_cursor.rs  design_overlay.rs  device_frame.rs  display.rs  display_state.rs  drag_drop.rs  frame_analysis.rs  game_mode.rs  gestures.rs  gif_capture.rs  h264_encoder.rs  heatmap.rs  i18n.rs  imgur_share.rs  iproxy_supervisor.rs  keyboard_input.rs  macros.rs  mod.rs  mouse_gesture.rs  multi_device.rs  notification_capture.rs  notification_rules.rs  ocr.rs  ocr_history.rs  pdf_export.rs  presentation.rs  privacy_mode.rs  qr_generator.rs  (+30 more)
src/idevice/: device_info.rs  file_transfer.rs  mod.rs  syslog.rs
src/system/: installer.rs  mod.rs  portable.rs  startup.rs  tray.rs  updater.rs
src/ui/: api.rs  web.rs
src/usb/: device.rs  diag.rs  idevice_bridge.rs  lockdown.rs  mod.rs  screen_capture.rs  usbmuxd.rs
tests/: unit_tests.rs
