[package]
name = "ios-remote"
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "iPhone screen mirroring & control via USB Type-C — written in Rust"

[features]
default = []
vr = []
lua = ["mlua"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
plist = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
minifb = "0.28"
image = "0.25"
rqrr = "0.8"
gif = "0.13"
arboard = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
winreg = "0.55"

# Lua scripting (optional)
mlua = { version = "0.10", features = ["lua54", "async", "vendored"], optional = true }
