[package]
name = "ios-remote"
version = "0.5.0"
edition = "2024"
license = "MIT"
description = "iPhone screen mirroring & control via USB Type-C — written in Rust (Windows-only)"

[features]
default = []
vr = []
lua = ["mlua"]
# Stream Deck HID support. Pulls in the elgato-streamdeck crate which uses
# hidapi; on Windows the system ships the HID stack, nothing else to install.
stream_deck = ["elgato-streamdeck"]
# Local Whisper transcription via whisper.cpp bindings. Requires a GGML model
# file at runtime (see README).
whisper = ["whisper-rs"]
# Unwired scaffolding that compiled into v0.5 but never reached a startup
# path. Kept under this flag during v0.6 stocktake so the designs survive
# compiler scrutiny without bloating default builds. See docs/ROADMAP-v0.6.md
# §68-feature stocktake. Candidates for promotion or deletion as usage emerges.
experimental = []

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
plist = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
minifb = "0.28"
image = "0.25"
rqrr = "0.8"
gif = "0.13"
arboard = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
winreg = "0.55"

# Lua scripting (optional)
mlua = { version = "0.10", features = ["lua54", "async", "vendored"], optional = true }

# Stream Deck HID (optional) — enable with --features stream_deck
elgato-streamdeck = { version = "0.8", optional = true }

# Local Whisper (optional) — enable with --features whisper
whisper-rs = { version = "0.11", optional = true }
