[package]
name = "ios-remote"
version = "0.7.1"
edition = "2024"
license = "MIT"
description = "iPhone screen mirroring & control via USB Type-C — written in Rust (Windows-only)"

[features]
default = []
vr = []
lua = ["mlua"]
# Stream Deck HID support. Pulls in the elgato-streamdeck crate which uses
# hidapi; on Windows the system ships the HID stack, nothing else to install.
stream_deck = ["elgato-streamdeck"]
# WASAPI loopback / mic capture via cpal. Drives the Transcriber when paired
# with `whisper` (or with OPENAI_API_KEY for the API fallback). See README
# §Audio capture.
audio_capture = ["dep:cpal"]
# Local Whisper transcription via whisper.cpp bindings. Requires a GGML model
# file at runtime (see README). Implies `audio_capture` so the end-to-end
# pipeline (capture → transcribe → subtitles) is actually reachable.
whisper = ["whisper-rs", "audio_capture"]
# Unwired scaffolding that compiled into v0.5 but never reached a startup
# path. Kept under this flag during v0.6 stocktake so the designs survive
# compiler scrutiny without bloating default builds. See docs/ROADMAP-v0.6.md
# §68-feature stocktake. Candidates for promotion or deletion as usage emerges.
experimental = []

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
plist = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
minifb = "0.28"
# `image` defaults pull avif → ravif → rav1e → unmaintained `paste`
# (RUSTSEC-2024-0436). We don't read AVIF templates, so explicitly opt
# in to the rest of `default-formats` minus `avif` and keep `rayon`.
image = { version = "0.25", default-features = false, features = ["rayon", "bmp", "dds", "exr", "ff", "gif", "hdr", "ico", "jpeg", "png", "pnm", "qoi", "tga", "tiff", "webp"] }
rqrr = "0.10"
gif = "0.13"
arboard = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
winreg = "0.55"

# Lua scripting (optional)
mlua = { version = "0.10", features = ["lua54", "async", "vendored"], optional = true }

# Stream Deck HID (optional) — enable with --features stream_deck
elgato-streamdeck = { version = "0.8", optional = true }

# Local Whisper (optional) — enable with --features whisper
whisper-rs = { version = "0.11", optional = true }

# WASAPI loopback / mic capture (optional) — enable with --features audio_capture
cpal = { version = "0.15", optional = true }
